Source/WebCore/svg/SVGFEComponentTransferElement.cpp
@@ -96,7 +96,7 @@ PassRefPtr<FilterEffect> SVGFEComponentTransferElement::build(SVGFilterBuilder* 
         else if (node->hasTagName(SVGNames::feFuncGTag))
             green = static_cast<SVGFEFuncGElement*>(node)->transferFunction();
         else if (node->hasTagName(SVGNames::feFuncBTag))
-           blue = static_cast<SVGFEFuncBElement*>(node)->transferFunction();
+            blue = static_cast<SVGFEFuncBElement*>(node)->transferFunction();
         else if (node->hasTagName(SVGNames::feFuncATag))
             alpha = static_cast<SVGFEFuncAElement*>(node)->transferFunction();
     }
